--- a/languages/davons-floating-admin-bar.pot
+++ b/languages/davons-floating-admin-bar.pot
@@ -1,38 +1,37 @@
-# Copyright (C) 2019 Davon Team
+# Copyright (C) 2019 joelmelon
 # This file is distributed under the same license as the Davon’s Floating Admin Bar plugin.
 msgid ""
 msgstr ""
 "Project-Id-Version: Davon’s Floating Admin Bar 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/davon-floating-admin-bar\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/davons-floating-admin-bar\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-05-24T13:03:52+00:00\n"
-"PO-Revision-Date: 2019-05-24T13:03:52+00:00\n"
+"POT-Creation-Date: 2019-09-09T09:50:16+00:00\n"
+"PO-Revision-Date: 2019-09-09T09:50:16+00:00\n"
 "X-Generator: WP-CLI 2.0.1\n"
-"X-Domain: davon-floating-admin-bar\n"
+"X-Domain: davons-floating-admin-bar\n"
 
 #. Plugin Name of the plugin
 msgid "Davon’s Floating Admin Bar"
 msgstr ""
 
-#. Plugin URI of the plugin
+#. Description of the plugin
+msgid "The Davon’s Floating Admin Bar floats at the top of your Website with minimal impact on the website’s appearance if you are logged in."
+msgstr ""
+
+#. Author of the plugin
+msgid "joelmelon"
+msgstr ""
+
 #. Author URI of the plugin
 msgid "https://joelstuedle.ch/"
 msgstr ""
 
-#. Description of the plugin
-msgid "The Davon’s Floating Admin Bar floats at the top of your Website with minimal impact on the website’s appearance."
-msgstr ""
-
-#. Author of the plugin
-msgid "Davon Team"
-msgstr ""
-
 #. translators: Compatibility-Check failed Warning
-#: davon-floating-admin-bar.php:52
+#: davons-floating-admin-bar.php:51
 msgctxt "Compatibility-Check failed Warning"
 msgid "%1$s requires PHP %2$s (or newer) and WordPress %3$s (or newer) to function properly. Your Site is using PHP %4$s and WordPress %5$s. Please upgrade. The Plugin has been deactivated automatically. Don’t hesitate to ask for Help @%6$s."
 msgstr ""
